fixed bug with highlight not showing up

--- a/src/stylesheets/components/_highlight.scss
+++ b/src/stylesheets/components/_highlight.scss
@@ -3,6 +3,10 @@
   display: inline-block;
 }
 
+.highlight--yellow {
+  z-index: 2;
+}
+
 .highlight--yellow::before {
   content: "";
   position: absolute;
